removes outdated references to --with-auth configure option
Summary:
Updates documentation to reflect removal of the --with-auth configure option:
https://git.cyrus.foundation/rI75f3d63e457577c8a562de8d00ef6e773649d47e

Test Plan: Compile to check configure script still works.

Reviewers: #imap_reviewers

Differential Revision: https://git.cyrus.foundation/D67

--- a/configure.ac
+++ b/configure.ac
@@ -940,7 +940,7 @@ if test "$with_krbdes" = "yes"; then
       else
           KRB_LIBS="-ldes"
       fi,
-  AC_MSG_ERROR([The Kerberos DES library is required for Kerberos support.  You might want --with-auth=unix.]))
+  AC_MSG_ERROR([The Kerberos DES library is required for Kerberos support.]))
 fi
 fi
 
