add backups to build config

--- a/Makefile.am
+++ b/Makefile.am
@@ -239,6 +239,10 @@ libexec_PROGRAMS += imap/sync_server
 sbin_PROGRAMS += imap/sync_client imap/sync_reset
 endif # REPLICATION
 
+if BACKUP
+libexec_PROGRAMS += backup/backupd
+endif # BACKUP
+
 if HAVE_SSL
 sbin_PROGRAMS += imap/tls_prune
 endif # HAVE_SSL
@@ -1234,6 +1238,9 @@ imap_sync_reset_LDADD = $(LD_UTILITY_ADD)
 
 imap_sync_server_SOURCES = imap/mutex_fake.c imap/sync_server.c imap/sync_support.c imap/sync_support.h master/service.c
 imap_sync_server_LDADD = $(LD_SERVER_ADD)
+
+backup_backupd_SOURCES = imap/mutex_fake.c backup/backupd.c imap/sync_support.c imap/sync_support.h master/service.c
+backup_backupd_LDADD = $(LD_SERVER_ADD)
 
 imap_tls_prune_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/tls_prune.c
 imap_tls_prune_LDADD = $(LD_UTILITY_ADD)
