--- a/configure.ac
+++ b/configure.ac
@@ -1507,6 +1507,21 @@ AC_ARG_ENABLE(replication,
 AM_CONDITIONAL([REPLICATION], [test "$enable_replication" != no])
 
 dnl
+dnl see if we're compiling backup support programs
+dnl
+AC_ARG_ENABLE(backup,
+        [AS_HELP_STRING([--enable-backup], [enable backup support (experimental)])],,[enable_backup="no";])
+AM_CONDITIONAL([BACKUP], [test "$enable_backup" != no])
+
+if test "x$enable_backup" != xno; then
+    if test "x$HAVE_SQLITE" != x1; then
+        AC_MSG_ERROR([Need sqlite3 for backups])
+    else
+        use_sqlite="yes"
+    fi
+fi
+
+dnl
 dnl Try and find a system version of com_err.
 dnl If we see something that looks a little wacky, ignore it (there are many
 dnl deficient installs of com_err, unfortunately, which leave out compile_et)
@@ -2070,6 +2085,7 @@ Cyrus Server configured components
    sieve:              $enable_sieve
    calalarmd:          $enable_calalarmd
    objectstore:        $enable_objectstore
+   backup:             $enable_backup
 
 External dependencies:
    ldap:               $have_ldap
