http_admin.c: added ability to view imapd.conf (similar to cyr_info)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1166,6 +1166,7 @@ imap_httpd_SOURCES = \
 	imap/xcal.c \
 	imap/xml_support.c \
 	imap/zoneinfo_db.c \
+	master/masterconf.c \
 	master/service.c
 
 imap_httpd_LDADD = $(LD_SERVER_ADD)
