--- a/Makefile.am
+++ b/Makefile.am
@@ -615,6 +615,8 @@ check_PROGRAMS += cunit/unit
 cunit_FRAMEWORK = \
 	cunit/unit.c \
 	cunit/cunit.h \
+	cunit/cyrfatal.c \
+	cunit/cyrfatal.h \
 	cunit/syslog.c \
 	cunit/cunit-syslog.h \
 	cunit/timeout.c \
