Makefile.am: add http headers to imap_httpd_SOURCES
They weren't being included in distribution tarballs because no part of
the Makefile.am knew they existed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1148,26 +1148,35 @@ imap_httpd_SOURCES = \
 	imap/http_admin.c \
 	imap/http_caldav.c \
 	imap/http_caldav_sched.c \
+	imap/http_caldav_sched.h \
 	imap/http_carddav.c \
 	imap/http_client.c \
+	imap/http_client.h \
 	imap/http_dav.c \
+	imap/http_dav.h \
 	imap/http_dblookup.c \
 	imap/http_ischedule.c \
 	imap/http_jmap.c \
 	imap/http_proxy.c \
+	imap/http_proxy.h \
 	imap/http_rss.c \
 	imap/http_tzdist.c \
 	imap/http_webdav.c \
 	imap/httpd.c \
+	imap/httpd.h \
 	imap/ical_support.c \
 	imap/jcal.c \
+	imap/jcal.h \
 	imap/mutex_fake.c \
 	imap/proxy.c \
 	imap/smtpclient.c \
 	imap/spool.c \
 	imap/xcal.c \
+	imap/xcal.h \
 	imap/xml_support.c \
+	imap/xml_support.h \
 	imap/zoneinfo_db.c \
+	imap/zoneinfo_db.h \
 	master/masterconf.c \
 	master/service.c
 
