--- a/Makefile.am
+++ b/Makefile.am
@@ -243,7 +243,7 @@ endif # REPLICATION
 if BACKUP
 libexec_PROGRAMS += backup/backupd
 noinst_PROGRAMS += backup/reindex
-sbin_PROGRAMS += backup/bulock
+sbin_PROGRAMS += backup/bu_lock
 endif # BACKUP
 
 if HAVE_SSL
@@ -1267,7 +1267,7 @@ backup_reindex_SOURCES = \
     backup/reindex.c
 backup_reindex_LDADD = $(LD_UTILITY_ADD)
 
-backup_bulock_SOURCES = \
+backup_bu_lock_SOURCES = \
     imap/mutex_fake.c \
     backup/api.c \
     backup/api.h \
@@ -1275,8 +1275,8 @@ backup_bulock_SOURCES = \
     backup/gzuncat.h \
     backup/sqlconsts.c \
     backup/sqlconsts.h \
-    backup/bulock.c
-backup_bulock_LDADD = $(LD_UTILITY_ADD)
+    backup/bu_lock.c
+backup_bu_lock_LDADD = $(LD_UTILITY_ADD)
 
 imap_tls_prune_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/tls_prune.c
 imap_tls_prune_LDADD = $(LD_UTILITY_ADD)
