Makefile.am: idled belongs in libexec

--- a/Makefile.am
+++ b/Makefile.am
@@ -199,7 +199,7 @@ endif # NNTPD
 libexec_PROGRAMS += imap/fud
 
 if IDLED
-sbin_PROGRAMS += imap/idled
+libexec_PROGRAMS += imap/idled
 endif # IDLED
 
 if MURDER
