Makefile.am: don't blat over noinst_LTLIBRARIES

--- a/Makefile.am
+++ b/Makefile.am
@@ -116,6 +116,7 @@ EXTRA_PROGRAMS = doc/text/htmlstrip
 check_PROGRAMS =
 libexec_PROGRAMS =
 sbin_PROGRAMS =
+noinst_LTLIBRARIES =
 CLEANFILES =
 EXTRA_DIST = \
 	$(wildcard tools/vzic/*)
@@ -281,7 +282,7 @@ endif # PTCLIENT
 
 if PERL
 SUBDIRS += perl/annotator perl/imap
-noinst_LTLIBRARIES = perl/libcyrus.la perl/libcyrus_min.la
+noinst_LTLIBRARIES += perl/libcyrus.la perl/libcyrus_min.la
 endif # PERL
 
 if SIEVE
