Makefile.am: don't blat over noinst_HEADERS

--- a/Makefile.am
+++ b/Makefile.am
@@ -111,6 +111,7 @@ EXTRA_PROGRAMS = tools/htmlstrip
 check_PROGRAMS =
 service_PROGRAMS =
 user_PROGRAMS =
+noinst_HEADERS =
 noinst_LTLIBRARIES =
 CLEANFILES =
 EXTRA_DIST = \
@@ -719,7 +720,7 @@ nodist_include_HEADERS = \
 nobase_include_HEADERS = sieve/sieve_interface.h
 nobase_nodist_include_HEADERS = sieve/sieve_err.h
 
-noinst_HEADERS = \
+noinst_HEADERS += \
 	lib/byteorder64.h \
 	lib/gai.h \
 	lib/libconfig.h \
