crc32: software-only version if compiler can't support SSE4.2

--- a/configure.ac
+++ b/configure.ac
@@ -1803,6 +1803,26 @@ if test "x$use_sqlite" = xyes; then
 fi
 AM_CONDITIONAL([USE_SQLITE], [test "x$use_sqlite" = xyes])
 
+
+dnl CRC32 optimisations
+
+dnl if the compiler has support for SSE4.2 then we can compile a hardware
+dnl implementation of CRC32C
+AC_MSG_CHECKING(for compiler support for SSE4.2 instruction)
+AC_CACHE_VAL(cyrus_cv_sse42, AC_TRY_COMPILE([
+    #include <stdint.h>
+],[
+    uint64_t a = 0, b = 1;
+    __asm__("rc32b\t" "(%1), %0"
+            : "=r"(b)
+            : "r"(b), "0"(a));
+    return b;
+], cyrus_cv_sse42=yes, cyrus_cv_sse42=no))
+if test "$cyrus_cv_sse42" = "yes" ; then
+    AC_DEFINE(HAVE_SSE42,1,"Compiler has support for SSE4.2 extensions")
+fi
+AC_MSG_RESULT($cyrus_cv_sse42)
+
 AH_TOP([
 /*
  * Copyright (c) 1994-2015 Carnegie Mellon University.  All rights reserved.
@@ -2063,4 +2083,7 @@ Search engine:
    squat:              $enable_squat
    sphinx:             $enable_sphinx
    xapian:             $enable_xapian
+
+Hardware support:
+    SSE4.2:            $cyrus_cv_sse42
 "
