configure.ac: check for SSE4.2 support by compiling code with crc32q rather than crc32b - my laptop seems to support the latter but not the former and lib/crc32c.c will fail to compile

--- a/configure.ac
+++ b/configure.ac
@@ -1816,7 +1816,7 @@ AC_CACHE_VAL(cyrus_cv_sse42, AC_TRY_COMPILE([
     #include <stdint.h>
 ],[
     uint64_t a = 0, b = 1;
-    __asm__("crc32b\t" "(%1), %0"
+    __asm__("crc32q\t" "(%1), %0"
             : "=r"(b)
             : "r"(b), "0"(a));
     return b;
