lcb: move backup_append implementation to own file

--- a/Makefile.am
+++ b/Makefile.am
@@ -803,6 +803,7 @@ backup_libcyrus_backup_la_SOURCES = \
     lib/gzuncat.c \
     lib/gzuncat.h \
     backup/lcb.c \
+    backup/lcb_append.c \
     backup/lcb_compact.c \
     backup/lcb_indexr.c \
     backup/lcb_indexw.c \
