Makefile.am: lex-fix workaround for debian flex bug
Debian flex 2.6.0-11 includes a patch series from upstream that
turns some previously yy_size_t variables back to int, for compatibility
with read(), but it's missed the last patch in the series, so yy_buf_size
remains a yy_size_t and triggers comparison-signedness warnings.

So: detect whether yy_n_chars is an int, and if so, make yy_buf_size one too.

Got sick of doing this by hand every build so in it goes :P

--- a/Makefile.am
+++ b/Makefile.am
@@ -1489,6 +1489,12 @@ lex-fix: sieve/addr-lex.c sieve/sieve-lex.c
 	grep -E ' yy_size_t  _yybytes_len ' sieve/addr-lex.c && \
     	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/addr-lex.c || :
 
+	grep -E '^static int yy_n_chars;' sieve/sieve-lex.c && \
+    	sed -r -i -s 's/\tyy_size_t yy_buf_size;/\tint yy_buf_size;/g' sieve/sieve-lex.c || :
+
+	grep -E '^static int yy_n_chars;' sieve/addr-lex.c && \
+    	sed -r -i -s 's/\tyy_size_t yy_buf_size;/\tint yy_buf_size;/g' sieve/addr-lex.c || :
+
 GIT_VERSION = $(PACKAGE_VERSION)@git_version@
 
 snapshot::
