Makefile.am: include lib/imapopts.c in perl/libcyrus_min.la
Fixes an oversight in 5904c7a: the inclusion of lib/imapopts.c
in lib_libcyrus_min_la_SOURCES was changed to nodist, without
a corresponding change to perl_libcyrus_min_la_SOURCES which
depended on it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1602,6 +1602,7 @@ perl_libcyrus_la_SOURCES = $(lib_libcyrus_la_SOURCES)
 perl_libcyrus_la_LIBADD = $(lib_libcyrus_la_LIBADD)
 perl_libcyrus_min_la_SOURCES = $(lib_libcyrus_min_la_SOURCES)
 perl_libcyrus_min_la_LIBADD = $(lib_libcyrus_min_la_LIBADD)
+nodist_perl_libcyrus_min_la_SOURCES = $(nodist_lib_libcyrus_min_la_SOURCES)
 
 perl_sieve_lib_libisieve_la_SOURCES = \
 	perl/sieve/lib/codes.h \
