cyr_buildinfo: Add cyr_buildinfo executable.
Summary:
From its man(8) page: Cyr_buildinfo is a tool to inspect the build
configuration of a Cyrus release. The intent is to provide compilation
settings during runtime and testing.

Test Plan: See the related Cassandane buildinfo patch.

Reviewers: murchison, #imap_reviewers

Reviewed By: murchison, #imap_reviewers

Subscribers: murchison

Differential Revision: https://git.cyrus.foundation/D88

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ imap/ctl_deliver
 imap/ctl_mboxlist
 imap/ctl_zoneinfo
 imap/cvt_cyrusdb
+imap/cyr_buildinfo
 imap/cyr_charset
 imap/cyr_dbtool
 imap/cyr_deny
